syntax = "proto3";

package hr;

option go_package = "example.com/go_hr_grpc;go_hr_grpc";

service Hr {
	rpc Login (LoginDetails) returns (User) {}
}

message LoginDetails {
	string email = 1;
	string password = 2;
}

message User {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
	string email = 4;
	string jobTitle = 5;
}